# rainwords

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
corpuses/: Abram - The Spell of the Sensuous.txt  Artaud - Le Théâtre et son Double.txt  Atlas Biologie Végétale (FR).txt  Bachelard - L'eau et les rêves (FR).txt  Bachelard - L'eau et les rêves.txt  Blake - Rossetti.txt  Breton - Manifeste du Surréalisme (FR).txt  Breton - Poésie (FR).txt  Jung - Selected Works (EN).txt  Poincaré - Science et Hypothèses (FR).txt
rainwords/: __main__.py  convert_pdf.py  corpus_builder-sentence.py  corpus_builder.py  llm_selection.py  main.html  main.py  poetry_docs.pkl  preload_models.py  semantics_and_colors.py  word_freq.pkl
